# looper

./: .env.example  .gitignore  README.md  calculator.py  fib.py  fib.py.bak  hello.py  index.html  package-lock.json  prime.py  pyproject.toml  reverse.py  server.py.bak  server_probe.py.bak  test.sh
docs/: code_and_docs_review_2026-05-13.md  looper_positioning_and_roadmap.md  opc_stage1_final_frozen_spec.md  sprint_guide.md  stage2_completion_report.md  stage2_next_phase_plan.md  stage3_completion_checklist.md
flask_app/: app.py
opc/: README.md  __init__.py  config.py  dashboard.py  executor.py  git_snapshot.py  llm.py  logger.py  main.py  metrics.py  parser.py  prompts.py  queue.py  sandbox.py  state.py  writer.py
opc/agents/: engineer.md  manager.md  qa.md
opc/logs/: events.jsonl
opc/memory/: decisions.md  product.md
opc/tasks/: inbox.md
opc/tasks/001_flask/: engineer_output.json  qa_report.json  retry_history.json  status.json  task.json  written_files.json
opc/tasks/inbox/: 2026-05-10-020.md
opc/tasks/task1_flask/: engineer_output.json  executed_commands.json  qa_report.json  status.json  task.json
opc/tasks/task2_health/: engineer_output.json  executed_commands.json  qa_report.json  status.json  task.json  written_files.json
opc/tools/: __init__.py  file_tools.py  search_tools.py
opc/ui/: tui.py
scripts/: check_doc_consistency.py  output_to_gif.py  record_demo.sh
src/: test_http.sh
tests/: conftest.py  test_executor_cleanup.py  test_git_snapshot.py  test_http_server.py  test_queue_stage2.py  test_sandbox.py  test_stage3.py
(+20 files in other folders)
